# targetTelegramSend

./: .gitignore  .gitmodules  README.md  pipinstall  pyproject.toml  updateTelegram.py
updateTelegram/: updateTelegram.py
